--- a/config.yaml
+++ b/config.yaml
@@ -1,8 +1,12 @@
+listen: 
+  host : 127.0.0.1
+  port : 8087
+
 hosts:
   - host : 127.0.0.1
     port : 8080
   - host : 127.0.0.1
     port : 8081
 
-listen: 8087
+
 service: LoadBalancer
