--- a/config.yaml
+++ b/config.yaml
@@ -1,11 +1,11 @@
 listen: 
-  host : 127.0.0.1
+  host : 0.0.0.0
   port : 8087
 
 hosts:
-  - host : 127.0.0.1
+  - host : node1-container
     port : 5001
-  - host : 127.0.0.1
+  - host : node2-container
     port : 5002
 
 
